--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Calculo do Cloro</h1>
+        <h1>Auxiliar de Cozinha: Higienização</h1>
     </header>
     <section id="calculadora">
             <h2>Calculadora da quantidade de Cloro</h2>
@@ -33,13 +33,17 @@
     <section id="conteudo">
 
     </section>
-    <section id="tabela">
-        <table>
+    <table id="tabela">
             <thead>
+                <tr>
+                    <th>
+                        Concentração Recomendada de Cloro para cada Superfície
+                    </th>
+                </tr>
                 <tr>
                     <th>Supercifice da Cozinha</th>
                     <th>Uso</th>
-                    <th>Concentradação de Cloro (ppm)</th>
+                    <th>Concentração de Cloro (ppm)</th>
                 </tr>
             </thead>
             <tbody>
@@ -84,8 +88,8 @@
                     <td>1000 ppm</td>
                 </tr>
             </tbody>
-        </table>
-    </section>
+    </table>
+
     <footer>
         <p id="criador">Site criado pelo &#64;André Luiz do Curso de Auxiliar de Cozinha</p>
     </footer>
