--- a/index.html
+++ b/index.html
@@ -4,92 +4,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Calculo do Cloro</title>
+    <title>Higienização com Cloro</title>
 </head>
 <body>
     <header>
-        <h1>Auxiliar de Cozinha: Higienização</h1>
+        <h1>Auxiliar de Cozinha: Higienização com Cloro</h1>
     </header>
-    <section id="calculadora">
-            <h2>Calculadora da quantidade de Cloro</h2>
-            <div class="conjunto_valores">
-                <p>Digite o Volume de água em Litros: <br>
-                <input type="number" name="volume_agua" id="volume_agua" step="0.01" onkeydown="proximoItem(event)" placeholder="Utiliza-se 1 Litro"> Litros</p>
+    <main>
+        <section class="conteudo">
+            <p>Bem-vindo ao nosso guia completo sobre a utilização do cloro para manter sua cozinha e alimentos limpos e seguros! Aqui, você descobrirá como o cloro pode ser usado tanto na limpeza das superfícies da cozinha quanto na higienização de hortifrutis, garantindo um ambiente saudável e a segurança alimentar.</p>
+            <h2>Importância da Higienização</h2>
+            <p>A higienização adequada é essencial para prevenir a contaminação cruzada e garantir a segurança alimentar. O cloro é um desinfetante poderoso e versátil que pode ser usado eficazmente para limpar superfícies da cozinha e higienizar frutas e vegetais.</p>
+            <h2>Uso do Cloro na Cozinha</h2>
+            <p>Manter a cozinha limpa é crucial para evitar a proliferação de microrganismos que podem causar doenças. O cloro pode ser utilizado para desinfetar diversas superfícies da cozinha, podemos usar a tabela abaixo para sabermos aonde usar e qual a quantidade da concentração de cloro usar (medida em <abbr title="Partes Por Milhão">ppm</abbr>)</p>
+            <div id="tabela">
+                <table>
+                        <thead>
+                            <tr>
+                                <th colspan="3"><h2>Concentração Recomendada de Cloro</h2></th>
+                            </tr>
+                            <tr>
+                                <th>Supercifice da Cozinha</th>
+                                <th>Uso</th>
+                                <th>Concentração de Cloro (ppm)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Bancadas e mesas</td>
+                                <td>Higienização geral após preparo de alimentos</td>
+                                <td>100 - 200 ppm</td>
+                            </tr>
+                            <tr>
+                                <td>Pia</td>
+                                <td>Higienização geral e após manipulação de alimentos</td>
+                                <td>100 - 200 ppm</td>
+                            </tr>
+                            <tr>
+                                <td>Tábuas de corte</td>
+                                <td>Higienização após cortar alimentos</td>
+                                <td>200 ppm</td>
+                            </tr>
+                            <tr>
+                                <td>Utensilhos de cozinha</td>
+                                <td>Higienização gral e após cortar alimentos</td>
+                                <td>100 - 200 ppm</td>
+                            </tr>
+                            <tr>
+                                <td>Geladeiras</td>
+                                <td>Higienização de prateleiras e superfícies internas</td>
+                                <td>100 - 200 ppm</td>
+                            </tr>
+                            <tr>
+                                <td>Fogões</td>
+                                <td>Higienização de superfícies externas</td>
+                                <td>100 - 200 ppm</td>
+                            </tr>
+                            <tr>
+                                <td>Micro-ondas e outros eletrodomésticos</td>
+                                <td>Higienização de superfícies internas e externas</td>
+                                <td>100 - 200 ppm</td>
+                            </tr>
+                            <tr>
+                                <td>Desinfecção profunda (ex.: após manipulação de carnes cruas)</td>
+                                <td>Higienização de todas as superfícies que entraram em contado com carne crua</td>
+                                <td>1000 ppm</td>
+                            </tr>
+                        </tbody>
+                </table>
             </div>
-            <div class="conjunto_valores">
-                <p>Digite a concentração do cloro em 'ppm': <br>
-                <input type="number" name="ppm_cloro" id="ppm_cloro" onkeydown="proximoItem(event)" placeholder="É mais utilizado 200 ppm"> ppm</p>
-            </div>
-            <div class="conjunto_valores">
-                <p>Digite a poncentagem de cloro ativo: <br>
-                    <input type="number" name="cloro_ativo" id="cloro_ativo" step="0.1" onkeydown="proximoItem(event)" placeholder="A 'QBOA' tem 2%"> %</p>
-            </div>
-            <div id="botoes">
-                <button type="button" id="submit" onclick="validacao_form()">Calcular</button>
-                <button type="button" id="reset" onclick="resetar_valores()">Resetar Valores</button>
-            </div>
-            <div id="saida"><p>Aqui irá sair o resultado</p></div>
-    </section>
-    <section id="conteudo">
-
-    </section>
-    <table id="tabela">
-            <thead>
-                <tr>
-                    <th>
-                        Concentração Recomendada de Cloro para cada Superfície
-                    </th>
-                </tr>
-                <tr>
-                    <th>Supercifice da Cozinha</th>
-                    <th>Uso</th>
-                    <th>Concentração de Cloro (ppm)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Bancadas e mesas</td>
-                    <td>Higienização geral após preparo de alimentos</td>
-                    <td>100 - 200 ppm</td>
-                </tr>
-                <tr>
-                    <td>Pia</td>
-                    <td>Higienização geral e após manipulação de alimentos</td>
-                    <td>100 - 200 ppm</td>
-                </tr>
-                <tr>
-                    <td>Tábuas de corte</td>
-                    <td>Higienização após cortar alimentos</td>
-                    <td>200 ppm</td>
-                </tr>
-                <tr>
-                    <td>Utensilhos de cozinha</td>
-                    <td>Higienização gral e após cortar alimentos</td>
-                    <td>100 - 200 ppm</td>
-                </tr>
-                <tr>
-                    <td>Geladeiras</td>
-                    <td>Higienização de prateleiras e superfícies internas</td>
-                    <td>100 - 200 ppm</td>
-                </tr>
-                <tr>
-                    <td>Fogões</td>
-                    <td>Higienização de superfícies externas</td>
-                    <td>100 - 200 ppm</td>
-                </tr>
-                <tr>
-                    <td>Micro-ondas e outros eletrodomésticos</td>
-                    <td>Higienização de superfícies internas e externas</td>
-                    <td>100 - 200 ppm</td>
-                </tr>
-                <tr>
-                    <td>Desinfecção profunda (ex.: após manipulação de carnes cruas)</td>
-                    <td>Higienização de todas as superfícies que entraram em contado com carne crua</td>
-                    <td>1000 ppm</td>
-                </tr>
-            </tbody>
-    </table>
-
+            <h2>Como Preparar a Solução de Cloro:</h2>
+            <ul>
+                <li><strong>Escolha a Concentração de Cloro</strong>: Determine a concentração desejada (ppm).</li>
+                <li><strong>Meça o Volume de Água</strong>: Insira o volume de água em litros.</li>
+                <li><strong>Porcentagem de Cloro Ativo</strong>: Utilize a porcentagem de cloro ativo na solução que você possui.</li>
+            </ul>
+        </section>
+        <section id="calculadora">
+                <h2>Calculadora de ml de Cloro</h2>
+                <p>Para facilitar a preparação das soluções de cloro, oferecemos uma calculadora prática. Insira a concentração desejada, o volume de água e a porcentagem de cloro ativo na sua solução, e a calculadora fornecerá a quantidade exata de ml de cloro necessário.</p>
+                <div class="conjunto_valores">
+                    <p>Digite o Volume de água em Litros: <br>
+                    <input type="number" name="volume_agua" id="volume_agua" step="0.01" onkeydown="proximoItem(event)" placeholder="Utiliza-se 1 Litro"> Litros</p>
+                </div>
+                <div class="conjunto_valores">
+                    <p>Digite a concentração do cloro em 'ppm': <br>
+                    <input type="number" name="ppm_cloro" id="ppm_cloro" onkeydown="proximoItem(event)" placeholder="É mais utilizado 200 ppm"> ppm</p>
+                </div>
+                <div class="conjunto_valores">
+                    <p>Digite a poncentagem de cloro ativo: <br>
+                        <input type="number" name="cloro_ativo" id="cloro_ativo" step="0.1" onkeydown="proximoItem(event)" placeholder="A 'QBOA' tem 2%"> %</p>
+                </div>
+                <div id="botoes">
+                    <button type="button" id="submit" onclick="validacao_form()">Calcular</button>
+                    <button type="button" id="reset" onclick="resetar_valores()">Resetar Valores</button>
+                </div>
+                <div id="saida">
+                    <p>Aqui irá sair o resultado</p>
+        
+                </div>
+                <ul id="limpezas_possiveis"></ul>
+        </section>
+        <section class="conteudo">
+            <h2>Dicas de Higienização</h2>
+            <ul>
+                <li><strong>Limpeza Frequente</strong>: Mantenha uma rotina de limpeza regular para prevenir a contaminação.</li>
+                <li><strong>Separação adequada</strong>: Use tábuas e utensílios separados para alimentos crus e cozidos.</li>
+                <li><strong>Armazenamento Correto</strong>: Guarde alimentos e produtos corretamente para evitar a proliferação de bactérias.</li>
+                <li><strong>Uso de Luvas</strong>: Proteja suas mãos durante a limpeza com luvas.</li>
+            </ul>
+        </section>
+        <section class="conteudo">
+            <h2>Conclusão</h2>
+            <p>A utilização do cloro para a higienização de superfícies da cozinha e hortifrutis é uma prática essencial para manter um ambiente seguro e saudável. Com as dicas fornecidas e a nossa calculadora de ml de cloro, você estará bem preparado para garantir a segurança alimentar e a limpeza adequada em sua cozinha. Explore mais sobre técnicas de higienização e ferramentas para facilitar seu dia a dia.</p>
+        </section>
+    </main>
     <footer>
         <p id="criador">Site criado pelo &#64;André Luiz do Curso de Auxiliar de Cozinha</p>
     </footer>
