--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <p>Manter a cozinha limpa é crucial para evitar a proliferação de microrganismos que podem causar doenças. O cloro pode ser utilizado para desinfetar diversas superfícies da cozinha, podemos usar a tabela abaixo para sabermos aonde usar e qual a quantidade da concentração de cloro usar (medida em <abbr title="Partes Por Milhão">ppm</abbr>)</p>
             <div id="tabela">
                 <table>
+                    <caption>
+                        <h2>Concentração Recomendada de Cloro</h2>
+                    </caption>
                         <thead>
-                            <tr>
-                                <th colspan="3"><h2>Concentração Recomendada de Cloro</h2></th>
-                            </tr>
                             <tr>
                                 <th>Supercifice da Cozinha</th>
                                 <th>Uso</th>
