--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </tbody>
                 </table>
             </div>
-            <h2>Como Preparar a Solução de Cloro:</h2>
+            <h2>Como Preparar a Solução Clorada:</h2>
             <ul>
                 <li><strong>Escolha a Concentração de Cloro</strong>: Determine a concentração desejada (ppm).</li>
                 <li><strong>Meça o Volume de Água</strong>: Insira o volume de água em litros.</li>
@@ -83,7 +83,7 @@
         </section>
         <section id="calculadora">
                 <h2>Calculadora de ml de Cloro</h2>
-                <p>Para facilitar a preparação das soluções de cloro, oferecemos uma calculadora prática. Insira a concentração desejada, o volume de água e a porcentagem de cloro ativo na sua solução, e a calculadora fornecerá a quantidade exata de ml de cloro necessário.</p>
+                <p>Para facilitar a preparação da solução clorada, oferecemos uma calculadora prática. Insira a concentração desejada, o volume de água e a porcentagem de cloro ativo na sua solução, e a calculadora fornecerá a quantidade exata de ml de cloro necessário.</p>
                 <div class="conjunto_valores">
                     <p>Digite o Volume de água em Litros: <br>
                     <input type="number" name="volume_agua" id="volume_agua" step="0.01" onkeydown="proximoItem(event)" placeholder="Utiliza-se 1 Litro"> Litros</p>
