--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>Importância da Higienização</h2>
             <p>A higienização adequada é essencial para prevenir a contaminação cruzada e garantir a segurança alimentar. O cloro é um desinfetante poderoso e versátil que pode ser usado eficazmente para limpar superfícies da cozinha e higienizar frutas e vegetais.</p>
             <h2>Uso do Cloro na Cozinha</h2>
-            <p>Manter a cozinha limpa é crucial para evitar a proliferação de microrganismos que podem causar doenças. O cloro pode ser utilizado para desinfetar diversas superfícies da cozinha, podemos usar a tabela abaixo para sabermos aonde usar e qual a quantidade da concentração de cloro usar (medida em <abbr title="Partes Por Milhão">ppm</abbr>)</p>
+            <p>Manter a cozinha limpa é crucial para evitar a proliferação de microrganismos que podem causar doenças. O cloro pode ser utilizado para desinfetar diversas superfícies da cozinha. A tabela abaixo mostra a concentração de cloro recomendada (medida em <abbr title="Partes Por Milhão">ppm</abbr>) para cada tipo de superfície.</p>
 
             <div id="tabela">
                 <table>
@@ -26,7 +26,7 @@
                     </caption>
                     <thead>
                         <tr>
-                            <th>Supercifice da Cozinha</th>
+                            <th>Superfície da Cozinha</th>
                             <th>Uso</th>
                             <th>Concentração de Cloro (ppm)</th>
                         </tr>
@@ -48,8 +48,8 @@
                             <td>200 ppm</td>
                         </tr>
                         <tr>
-                            <td>Utensilhos de cozinha</td>
-                            <td>Higienização gral e após cortar alimentos</td>
+                            <td>Utensílios de cozinha</td>
+                            <td>Higienização geral e após cortar alimentos</td>
                             <td>100 - 200 ppm</td>
                         </tr>
                         <tr>
@@ -69,7 +69,7 @@
                         </tr>
                         <tr>
                             <td>Desinfecção profunda (ex.: após manipulação de carnes cruas)</td>
-                            <td>Higienização de todas as superfícies que entraram em contado com carne crua</td>
+                            <td>Higienização de todas as superfícies que entraram em contato com carne crua</td>
                             <td>1000 ppm</td>
                         </tr>
                     </tbody>
@@ -86,15 +86,11 @@
                 <h2>Calculadora de ml de Cloro</h2>
                 <p>Para facilitar a preparação da solução clorada, oferecemos uma calculadora prática. Insira a concentração desejada, o volume de água e a porcentagem de cloro ativo na sua solução, e a calculadora fornecerá a quantidade exata de ml de cloro necessário.</p>
                 <div class="conjunto_valores">
-                    <p>Digite o Volume de água em Litros: <br>
+                    <p>Digite o Volume de água em Litros:
                     <input type="number" name="volume_agua" id="volume_agua" step="0.01" onkeydown="proximoItem(event)" placeholder="Utiliza-se 1 Litro"> Litros</p>
-                </div>
-                <div class="conjunto_valores">
-                    <p>Digite a concentração do cloro em 'ppm': <br>
+                    <p>Digite a concentração do cloro em 'ppm':
                     <input type="number" name="ppm_cloro" id="ppm_cloro" onkeydown="proximoItem(event)" placeholder="É mais utilizado 200 ppm"> ppm</p>
-                </div>
-                <div class="conjunto_valores">
-                    <p>Digite a poncentagem de cloro ativo: <br>
+                    <p>Digite a porcentagem de cloro ativo:
                         <input type="number" name="cloro_ativo" id="cloro_ativo" step="0.1" onkeydown="proximoItem(event)" placeholder="A 'QBOA' tem 2%"> %</p>
                 </div>
                 <div id="botoes">
