Atualizacao dessa bosta, vai ter que arrumar o javascript, adicionado o codigo a seguir:     saida.innerHTML = ''     p.innerHTML = 'ERRO: Por favor, complete os campos anteriores'     p.id = 'erro'     saida.appendChild(p)

--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
                     <button type="button" id="reset" onclick="resetar_valores()">Resetar Valores</button>
                 </div>
                 <div id="saida">
-                    <p>Aqui irá sair o resultado</p>
+                    <p id="nada">Aqui irá sair o resultado</p>
         
                 </div>
-                <ul id="limpezas_possiveis"></ul>
+                <div id="limpeza">
+                    <ul id="limpezas_possiveis"></ul>
+                </div>
         </section>
         <section class="conteudo">
             <h2>Dicas de Higienização</h2>
@@ -117,8 +119,7 @@
             <p>A utilização do cloro para a higienização de superfícies da cozinha e hortifrutis é uma prática essencial para manter um ambiente seguro e saudável. Com as dicas fornecidas e a nossa calculadora de ml de cloro, você estará bem preparado para garantir a segurança alimentar e a limpeza adequada em sua cozinha. Explore mais sobre técnicas de higienização e ferramentas para facilitar seu dia a dia.</p>
         </section>
     </main>
-    <footer>
-        <p id="criador">Site criado pelo &#64;André Luiz do Curso de Auxiliar de Cozinha</p>
+    <footer>Site criado pelo &#64;André Luiz do Curso de Auxiliar de Cozinha
     </footer>
     <script src="script.js"></script>
 </body>
