Projeto finalizado com sucesso

--- a/index.html
+++ b/index.html
@@ -98,10 +98,8 @@
                     <button type="button" id="reset" onclick="resetar_valores()">Resetar Valores</button>
                 </div>
                 <div id="saida">
-                    <p id="nada">Aqui irá sair o resultado</p>
-        
-                </div>
-                <div id="limpeza">
+                    <p id="saidap">Aqui irá sair o resultado</p>
+                    <p id="erro"></p>
                     <ul id="limpezas_possiveis"></ul>
                 </div>
         </section>
