--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="conteudo">
-            <p>Bem-vindo ao nosso guia completo sobre a utilização do cloro para manter sua cozinha e alimentos limpos e seguros (Feito pelo <a href="https://andreluizhla.github.io/repositorio-oficial">André Luiz</a>)! Aqui, você descobrirá como o cloro pode ser usado tanto na limpeza das superfícies da cozinha quanto na higienização de hortifrutis, garantindo um ambiente saudável e a segurança alimentar.</p>
+            <p>Bem-vindo ao nosso guia completo sobre a utilização do cloro para manter sua cozinha e alimentos limpos e seguros (Feito pelo  <a href="https://andreluizhla.github.io/repositorio-oficial" target="_blank">André Luiz</a>)! Aqui, você descobrirá como o cloro pode ser usado tanto na limpeza das superfícies da cozinha quanto na higienização de hortifrutis, garantindo um ambiente saudável e a segurança alimentar.</p>
             <h2>Importância da Higienização</h2>
             <p>A higienização adequada é essencial para prevenir a contaminação cruzada e garantir a segurança alimentar. O cloro é um desinfetante poderoso e versátil que pode ser usado eficazmente para limpar superfícies da cozinha e higienizar frutas e vegetais.</p>
             <h2>Uso do Cloro na Cozinha</h2>
@@ -117,7 +117,7 @@
             <p>A utilização do cloro para a higienização de superfícies da cozinha e hortifrutis é uma prática essencial para manter um ambiente seguro e saudável. Com as dicas fornecidas e a nossa calculadora de ml de cloro, você estará bem preparado para garantir a segurança alimentar e a limpeza adequada em sua cozinha. Explore mais sobre técnicas de higienização e ferramentas para facilitar seu dia a dia.</p>
         </section>
     </main>
-    <footer>Site criado pelo <a href="https://andreluizhla.github.io/repositorio-oficial">André Luiz</a> do Curso de Auxiliar de Cozinha
+    <footer>Site criado pelo  <a href="https://andreluizhla.github.io/repositorio-oficial" target="_blank">André Luiz</a> do Curso de Auxiliar de Cozinha
     </footer>
     <script src="script.js"></script>
 </body>
